--- a/css/content.css
+++ b/css/content.css
@@ -11,6 +11,9 @@ body {
 #popupButton {
   opacity: 0;
 }
+.ant-btn {
+  display: none !important;
+}
 .kaptionai-conversation-actionbar,
 .tooltiptext {
   display: none;
@@ -156,6 +159,8 @@ body {
   --switch-button-checked-color: white !important;
   --switch-track-checked-color: rgba(255, 255, 255, 0.8) !important;
   --chat-marker-background: #272727 !important;
+  --thumb-border-active: #272727 !important;
+  --chat-info-drawer-thumb-background: #272727 !important;
 
   /*Menu desplegable*/
   --dropdown-background: black !important;
@@ -294,8 +299,8 @@ body {
   background-color: #272727 !important;
 }
 .x1hc1fzr {
-  background-color: white !important;
-  color: black !important;
+  background-color: black !important;
+  color: white !important;
 }
 
 /*Fondo de sleccion de texto y archivos*/
@@ -330,4 +335,17 @@ body {
 .x1f6z2i5::selection {
   background-color: rgba(39, 39, 39, 0.8) !important;
   color: white !important;
+}
+
+/*Fix fondo de foto de perfil*/
+.xfbpl4g {
+  background-color: rgba(39, 39, 39, 0.8) !important;
+}
+.x1sliqq ._ak72 {
+  --background-default: (39, 39, 39, 0) !important;
+}
+
+/*Fix logo de mensajes temporales*/
+.x12fk4p8 g {
+  fill: white !important;
 }
